# glycobench

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  pyproject.toml.bak
config/: dataset.yaml
deliverables/: deliverables_index.csv
deliverables/tables/: .~lock.table_dataset_overview.csv#  table_dataset_overview.csv  table_fig_global_min_rmsd_by_class_paired_bootstrap.csv  table_fig_global_min_rmsd_by_class_summary.csv  table_fig_global_rg_typicity_by_class_paired_bootstrap.csv  table_fig_global_rg_typicity_by_class_summary.csv  table_fig_global_span_typicity_by_class_paired_bootstrap.csv  table_fig_global_span_typicity_by_class_summary.csv  table_fig_local_median_circular_distance_omega_by_class_paired_bootstrap.csv  table_fig_local_median_circular_distance_omega_by_class_summary.csv  table_fig_local_median_circular_distance_phi_by_class_paired_bootstrap.csv  table_fig_local_median_circular_distance_phi_by_class_summary.csv  table_fig_local_median_circular_distance_psi_by_class_paired_bootstrap.csv  table_fig_local_median_circular_distance_psi_by_class_summary.csv  table_fig_local_pucker_disagreement_by_class_paired_bootstrap.csv  table_fig_local_pucker_disagreement_by_class_summary.csv  (+10 more)
results/: analysis_manifest.csv  compare_global_shape.csv  compare_global_shape_by_class.csv  compare_local_conformation_by_class.csv  compare_local_puckering.csv  compare_local_torsions.csv  compare_shielding_by_class.csv  compare_shielding_profiles.csv  compare_shielding_summary.csv  glycan_conformation_descriptors_summary.json  glycan_conformation_rings.csv  glycan_frame_qc.csv  glycan_frame_qc_summary.json  glycan_shape_descriptors.csv  glycan_shape_descriptors_summary.json  glycan_shielding_descriptors_summary.json  glycan_shielding_qc_full.json  glycontact_adapter_qc.csv  glycontact_adapter_qc_summary.json  ingestion_qc.csv
(+198 files in other folders)
